--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,8 @@ add_message_files(
   ClassificationData.msg
   ClassificationElement.msg
   SensorMapData.msg
+  MaskImageData.msg
+  synchronizedImage.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -153,6 +155,26 @@ add_executable(${PROJECT_NAME}_cc # classification
   src/classification/debug_methods.cpp
   src/classification/property.cpp
 )
+add_executable(${PROJECT_NAME}_sc # stereo camera 
+  src/convCamData/constructor.cpp
+  src/convCamData/methods.cpp
+  src/convCamData/debug_main.cpp
+  src/convCamData/property.cpp
+)
+add_executable(${PROJECT_NAME}_si # point cloud
+  src/synchroImage/constructor.cpp
+  src/synchroImage/methods.cpp
+  src/synchroImage/debug_main.cpp
+  src/synchroImage/debug_methods.cpp
+  src/synchroImage/property.cpp
+)
+add_executable(${PROJECT_NAME}_frm # manage
+  src/frameRateManagement/constructor.cpp
+  src/frameRateManagement/methods.cpp
+  src/frameRateManagement/debug_main.cpp
+  src/frameRateManagement/debug_methods.cpp
+  src/frameRateManagement/property.cpp
+)
 add_executable(${PROJECT_NAME}_pc # manage
   src/constructor.cpp
   src/methods.cpp
@@ -169,13 +191,18 @@ add_executable(${PROJECT_NAME}_cd # manage
 add_dependencies(${PROJECT_NAME}_pc ${PROJECT_NAME}_generate_messages_cpp)
 add_dependencies(${PROJECT_NAME}_cd ${PROJECT_NAME}_generate_messages_cpp)
 add_dependencies(${PROJECT_NAME}_cc ${PROJECT_NAME}_generate_messages_cpp)
+add_dependencies(${PROJECT_NAME}_sc ${PROJECT_NAME}_generate_messages_cpp)
+add_dependencies(${PROJECT_NAME}_si ${PROJECT_NAME}_generate_messages_cpp)
+add_dependencies(${PROJECT_NAME}_frm ${PROJECT_NAME}_generate_messages_cpp)
 
 add_dependencies(${PROJECT_NAME}_cc ${PROJECT_NAME}_gencfg)
 
 target_link_libraries(${PROJECT_NAME}_pc ${catkin_LIBRARIES} )
 target_link_libraries(${PROJECT_NAME}_cd ${catkin_LIBRARIES} )
 target_link_libraries(${PROJECT_NAME}_cc ${catkin_LIBRARIES}) # classification
-
+target_link_libraries(${PROJECT_NAME}_sc ${catkin_LIBRARIES}) # stereo camera 
+target_link_libraries(${PROJECT_NAME}_si ${catkin_LIBRARIES} ${OpenCV_LIBRARIES}) # synchro image
+target_link_libraries(${PROJECT_NAME}_frm ${catkin_LIBRARIES} ) # manege 
 
 #############
 ## Install ##
