--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,7 @@ generate_messages(
   DEPENDENCIES
   sensor_msgs
   geometry_msgs
+  std_msgs
 )
 
 ################################################
