--- a/cfg/risk_prediction.cfg
+++ b/cfg/risk_prediction.cfg
@@ -7,4 +7,4 @@ gen = ParameterGenerator()
 
 gen.add("weight_kyori",    double_t, 0, "A double parameter",      0.01, 2, 4)
 gen.add("weight_yokohaba",    double_t, 0, "A double parameter",      0.01, 2, 4)
-exit(gen.generate(PACKAGE, "potbot", "ClusteringParam"))
+exit(gen.generate(PACKAGE, "mynteye_poitcloud", "risk_prediction"))
