--- a/package.xml
+++ b/package.xml
@@ -7,6 +7,7 @@
   <license>TODO</license>
 
   <build_depend>message_generation</build_depend>
+  <build_depend>potbot_lib</build_depend>
   <exec_depend>message_runtime</exec_depend>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
